<resources>
    <string name="app_name">Logger</string>
    <string name="action_settings">Settings</string>
    <string name="callLog">Call Log</string>
    <string name="smsLog">SMS Log</string>
    <string name="runStart">Run on startup</string>
    <string name="runStart_summary">Runs the logger on phone start</string>
    <string name="keepScreenOn">Keep screen on</string>
    <string name="keepScreenOn_summary">Keeps the screen on while app is running</string>
    <string name="brand_model">Brand/Model:</string>
    <string name="os_version">Version:</string>
    <string name="imei">IMEI:</string>
    <string name="imsi">IMSI:</string>
    <string name="msisdn">MSISDN:</string>
    <string name="phone_details">Phone Details</string>
    <string name="statistics">Statistics</string>
    <string name="calls">Calls:</string>
    <string name="sms">SMS:</string>
    <string name="calls_view_label">Calls View</string>
    <string name="view_entry">View Entry</string>
    <string name="started_at">Started at:</string>
    <string name="duration">Duration:</string>
    <string name="content">Content:</string>
    <string name="show_location">Show Location</string>
    <string name="title_activity_map">Map</string>
    <string name="cell_id">Cell ID:</string>
    <string name="lac">LAC:</string>
    <string name="close">Close</string>
    <string name="rssi">RSSI:</string>
    <string name="lte_details">LTE Details</string>
    <string name="rsrp">RSRP:</string>
    <string name="rsrq">RSRQ:</string>
    <string name="rsssnr">RSSSNR:</string>
    <string name="cqi">CQI:</string>
    <string name="rat">RAT:</string>
    <string name="upload_settings">Upload Settings</string>
    <string name="use_wifi_data">Use Wifi and data</string>
    <string name="use_wifi">Use only Wifi</string>
    <string name="msisdn_dialog_title">Please enter your phone number</string>
    <string name="ok_btn">OK</string>
    <string name="use_data">Use only data</string>
    <string name="no_results">No Results</string>
    <string name="update">Update</string>
    <string name="check_for_update">Check for update</string>
    <string name="current_version">Current Version:</string>
    <string name="Debug">Debug</string>
    <string name="server_url">Server URL</string>
</resources>
