<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context="com.ntua.ote.logger.MainActivity"
    tools:showIn="@layout/activity_main">

    <Switch android:id="@+id/checkbox_run_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runStart"
        android:onClick="onRunOnStartup"/>

    <Switch android:id="@+id/checkbox_callLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/callLog"
        android:onClick="onCallLogStart"/>

    <Switch android:id="@+id/checkbox_smsLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smsLog"
        android:onClick="onSmsLogStart"/>

    <TextView
        android:id="@+id/LatestLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
