<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/statistics"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="@dimen/header_top_padding"
            android:paddingBottom="@dimen/header_top_padding"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/header_top_padding"
        android:paddingLeft="@dimen/header_left_right_padding"
        android:paddingRight="@dimen/header_left_right_padding"
        android:paddingBottom="@dimen/header_top_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/border_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/statistics_top_bot_padding"
            android:paddingBottom="@dimen/statistics_top_bot_padding"
            android:layout_height="wrap_content"
            android:onClick="viewCallsList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calls"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="end"
                android:paddingLeft="@dimen/header_left_right_padding"
                android:paddingRight="@dimen/header_left_right_padding"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calls_num"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forward" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/statistics_top_bot_padding"
            android:paddingBottom="@dimen/statistics_top_bot_padding"
            android:layout_height="wrap_content"
            android:onClick="viewSmsList">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sms"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="end"
                android:paddingLeft="@dimen/header_left_right_padding"
                android:paddingRight="@dimen/header_left_right_padding"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sms_num"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/forward" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>